# RpolyPlusPlus

./: CMakeLists.txt  README.md
src/: find_polynomial_roots_jenkins_traub.cc  find_polynomial_roots_jenkins_traub.h  polynomial.cc  polynomial.h
test/: find_polynomial_roots_jenkins_traub_test.cc  test_main.cc  test_utils.h
